Add is_subs property to TItem type, update en.json, add remove coupon button

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -63,6 +63,7 @@
         },
         "redeem-coupons-or-gift-cards": "Redeem Coupons or Gift Cards",
         "active-gift": "Active gift",
+        "remove-gift": "Remove",
         "redeem": "Redeem",
         "referral-code": "Referral Code",
         "payment-method": "Payment method",
