Add empty cart message on checkout

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -51,6 +51,8 @@
         "actions": "Actions",
         "featured-deal": "Featured Deal",
         "this-item-is-popular-among-us-customers": "This item is popular among us customers. Give it a try!",
+        "empty-cart-title": "Oops! Your Cart is Empty",
+        "empty-cart-description": "Looks like there is nothing in your cart at the moment. Take a moment to explore our store and discover amazing in-game items, ranks, and more! When you find something you like, simply add it to your cart and proceed to checkout.",
         "details": {
             "you-are-buying-as": "You are buying as...",
             "not-correct": "Not correct ?",
