Update button styling and add Romanian translation

--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -4,71 +4,78 @@
         "language": "Язык",
         "cart": "Корзина",
         "cart-hint": "товаров на",
-        "not-logged": "Вы не вошли",
-        "logout": "Выйти"
+        "not-logged": "Не вошли",
+        "logout": "Выйти",
+        "empty-cart": "Пустая корзина"
     },
     "header": {
-        "players-online": "Игроков онлайн",
-        "members-online": "Участников онлайн",
-        "donation-goal": "Цель пожертвования"
+        "players-online": "Игроки онлайн",
+        "members-online": "Участники онлайн",
+        "donation-goal": "Цель пожертвований",
+        "discord-server": "Сервер Discord"
     },
     "sidebar": {
         "home": "Главная",
-        "top-donator": "Топ Донатор",
-        "top-donator-hint": "Самый щедрый в этом месяце"
+        "top-donator": "Лучший донатер",
+        "top-donator-hint": "Больше всего пожертвовал в этом месяце"
     },
     "card": {
         "buy": "Купить",
-        "remove": "Убрать",
+        "remove": "Удалить",
         "unavailable": "Недоступно"
     },
     "item-details": {
         "add": "Добавить",
-        "remove": "Убрать"
+        "remove": "Удалить"
     },
     "recent-purchases": "Последние платежи",
     "home": {
         "welcome": "Добро пожаловать",
         "featured-packages": "ПОПУЛЯРНЫЕ ПАКЕТЫ",
-        "to-the-official-server-store": "в официальный магазин RAviRai Server.",
+        "to-the-official-server-store": "в официальный магазин сервера RAviRai.",
         "recent-purchases": "Последние покупки",
         "paypal-balance-banks-all-credit-debit-cards": "Баланс PayPal, Банки, Все кредитные/дебетовые карты",
-        "paysafecard-amazon-pay-mobile-payments-600-more": "Paysafecard, Amazon Pay, Мобильные платежи, +600 Других",
+        "paysafecard-amazon-pay-mobile-payments-600-more": "Paysafecard, Amazon Pay, Мобильные платежи, +600 других",
         "all-credit-debit-cards": "Все кредитные и дебетовые карты"
     },
     "auth": {
-        "enter-username": "Пожалуйста, введите ваше имя пользователя, чтобы продолжить:",
+        "enter-username": "Пожалуйста, введите своё имя пользователя, чтобы продолжить:",
         "continue": "Продолжить"
     },
     "checkout": {
         "title": "Оформление заказа",
-        "name": "Имя",
+        "image": "Изображение",
+        "name": "Название",
         "price": "Цена",
         "quantity": "Количество",
+        "actions": "Действия",
         "featured-deal": "Популярное предложение",
-        "this-item-is-popular-among-us-customers": "Этот товар популярен среди наших клиентов. Попробуйте его!",
+        "this-item-is-popular-among-us-customers": "Этот товар популярен среди наших клиентов. Попробуйте!",
+        "empty-cart-title": "Упс! Ваша корзина пуста",
+        "empty-cart-description": "Похоже, в вашей корзине пока ничего нет. Ознакомьтесь с нашим магазином и откройте для себя удивительные игровые предметы, ранги и многое другое! Когда найдёте что-то интересное, просто добавьте это в корзину и перейдите к оформлению заказа.",
         "details": {
             "you-are-buying-as": "Вы покупаете как...",
-            "not-correct": "Не правильно?",
+            "not-correct": "Неверно?",
             "your-details": "Ваши данные",
             "first-name": "Имя",
-            "email": "E-mail",
-            "address-line-1": "Адрес, строка 1",
-            "address-line-2": "Адрес, строка 2",
+            "email": "Электронная почта",
+            "address-line-1": "Адрес (строка 1)",
+            "address-line-2": "Адрес (строка 2)",
             "city": "Город",
             "zip-code": "Почтовый индекс",
-            "state-region": "Штат/Регион",
+            "state-region": "Штат/регион",
             "country": "Страна"
         },
         "redeem-coupons-or-gift-cards": "Использовать купоны или подарочные карты",
         "active-gift": "Активный подарок",
+        "remove-gift": "Удалить",
         "redeem": "Использовать",
-        "referral-code": "Реферральный код",
+        "referral-code": "Реферальный код",
         "payment-method": "Метод оплаты",
-        "privacy-statement": "Заявление о конфиденциальности",
-        "privacy-statement-description": "Все платежи являются окончательными и не подлежат возврату. Попытка обратного списания или открытие спора в PayPal приведет к постоянному и необратимому бану на всех наших серверах и других магазинах Minecraft.",
-        "agree": "Я соглашаюсь с условиями этой покупки.",
-        "purchase": "Покупка"
+        "privacy-statement": "Политика конфиденциальности",
+        "privacy-statement-description": "Все платежи являются окончательными и не подлежат возврату. Попытка возврата платежа или открытие спора через PayPal приведёт к постоянному и необратимому бану на всех наших серверах и других майнкрафтовских магазинах.",
+        "agree": "Я согласен с условиями и положениями этой покупки.",
+        "purchase": "Купить"
     },
     "profile": {
         "title": "Профиль",
@@ -78,15 +85,15 @@
         "recent-purchases": "Последние покупки"
     },
     "notifications": {
-        "not-all-detail-fields-are-filled-in": "Не все поля заполнены!",
-        "accept-privacy-statement": "Примите заявление о конфиденциальности!",
-        "accept-terms": "Примите условия!",
+        "not-all-detail-fields-are-filled-in": "Не все поля данных заполнены!",
+        "accept-privacy-statement": "Примите Политику конфиденциальности!",
+        "accept-terms": "Примите Условия!",
         "subscription-item-should-be-alone-in-the-cart": "Подписочный товар должен быть один в корзине!"
     },
     "footer": {
         "useful-links": "Полезные ссылки",
         "about-us": "О нас",
-        "info": "Мы не связаны с Mojang AB. Работает на платформе",
-        "description": "является сетью Minecraft: Java Edition, предоставляющей игрокам захватывающий и уникальный геймплей. Это единственный официальный магазин для сети."
+        "info": "Мы не являемся аффилированными с Mojang AB. Работает на платформе",
+        "description": "является сетью Minecraft: Java Edition, предоставляющей игрокам увлекательный и уникальный геймплей. Это единственный официальный магазин для сети."
     }
 }
