--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -30,7 +30,8 @@
         "remove": "Удалить",
         "subscribe": "Подписаться",
         "unavailable": "Недоступно",
-        "items-left": "осталось товаров"
+        "items-left": "осталось товаров",
+        "featured": "Рекомендуемый"
     },
     "recent-purchases": "Недавние покупки",
     "home": {
@@ -148,5 +149,15 @@
         "serverIssue": "Возможно, наши серверы недоступны или что-то произошло с вашим платежом.",
         "contactWithProof": "Пожалуйста, свяжитесь с нами с вашим именем пользователя и приложенным подтверждением покупки.",
         "paymentIssue": "Возможно, ваш платеж помечен как 'ожидающий'. Также убедитесь, что вы указали правильное имя пользователя Minecraft. Если это не так, пожалуйста, укажите это."
+    },
+    "actions": {
+        "please-authorize": "Пожалуйста, авторизуйтесь!",
+        "item-not-found": "Товар не найден!",
+        "item-out-of-stock": "Товар отсутствует на складе!",
+        "reached-stock-limit": "Вы достигли лимита для этого товара!",
+        "cant-mix-normal-and-subscription": "Вы не можете смешивать обычные товары с подписочными!",
+        "cant-add-more-than-one-subscription": "Вы не можете добавить более одной подписки в корзину!",
+        "item-removed-from-cart": "Товар удален из корзины!",
+        "item-added-to-cart": "Товар добавлен в корзину!"
     }
 }
