Shorter variation for add to cart in translations.

--- a/src/locales/cs.json
+++ b/src/locales/cs.json
@@ -26,7 +26,7 @@
         "no-top-donor-description": "Staňte se podporovatelem a získejte exkluzivní výhody!"
     },
     "card": {
-        "buy": "Přidat do košíku",
+        "buy": "Přidat",
         "remove": "Odebrat",
         "subscribe": "Přihlásit se k odběru",
         "unavailable": "Není k dispozici",
