--- a/src/locales/da.json
+++ b/src/locales/da.json
@@ -26,7 +26,7 @@
         "no-top-donor-description": "Bliv en supporter for at få eksklusive fordele!"
     },
     "card": {
-        "buy": "Tilføj til kurv",
+        "buy": "Tilføj",
         "remove": "Fjern",
         "subscribe": "Abonner",
         "unavailable": "Utilgængelig",
