--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -26,7 +26,7 @@
         "no-top-donor-description": "Werde ein Unterstützer, um exklusive Vorteile freizuschalten!"
     },
     "card": {
-        "buy": "In den Warenkorb",
+        "buy": "Hinzufügen",
         "remove": "Entfernen",
         "subscribe": "Abonnieren",
         "unavailable": "Nicht verfügbar",
