--- a/src/locales/it.json
+++ b/src/locales/it.json
@@ -26,7 +26,7 @@
         "no-top-donor-description": "Diventa un sostenitore per sbloccare vantaggi esclusivi!"
     },
     "card": {
-        "buy": "Aggiungi al Carrello",
+        "buy": "Acquista",
         "remove": "Rimuovi",
         "subscribe": "Iscriviti",
         "unavailable": "Non disponibile",
