--- a/src/locales/nl.json
+++ b/src/locales/nl.json
@@ -26,7 +26,7 @@
         "no-top-donor-description": "Word een supporter om exclusieve voordelen te ontgrendelen!"
     },
     "card": {
-        "buy": "Toevoegen aan winkelwagen",
+        "buy": "Kopen",
         "remove": "Verwijderen",
         "subscribe": "Abonneren",
         "unavailable": "Niet beschikbaar",
