--- a/src/locales/no.json
+++ b/src/locales/no.json
@@ -26,7 +26,7 @@
         "no-top-donor-description": "Bli en supporter for å få eksklusive fordeler!"
     },
     "card": {
-        "buy": "Legg til i handlekurv",
+        "buy": "Kjøp",
         "remove": "Fjern",
         "subscribe": "Abonner",
         "unavailable": "Utilgjengelig",
