--- a/src/locales/pt-BR.json
+++ b/src/locales/pt-BR.json
@@ -26,7 +26,7 @@
         "no-top-donor-description": "Seja um apoiador para desbloquear benefícios exclusivos!"
     },
     "card": {
-        "buy": "Adicionar ao Carrinho",
+        "buy": "Comprar",
         "remove": "Remover",
         "subscribe": "Inscrever-se",
         "unavailable": "Indisponível",
