--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -26,7 +26,7 @@
         "no-top-donor-description": "Станьте поддержкой, чтобы получить эксклюзивные преимущества!"
     },
     "card": {
-        "buy": "Добавить в корзину",
+        "buy": "Купить",
         "remove": "Удалить",
         "subscribe": "Подписаться",
         "unavailable": "Недоступно",
