--- a/src/locales/sv-SE.json
+++ b/src/locales/sv-SE.json
@@ -26,7 +26,7 @@
         "no-top-donor-description": "Bli en supporter för att låsa upp exklusiva förmåner!"
     },
     "card": {
-        "buy": "Lägg till i varukorgen",
+        "buy": "Köp",
         "remove": "Ta bort",
         "subscribe": "Prenumerera",
         "unavailable": "Ej tillgänglig",
