--- a/src/locales/es-ES.json
+++ b/src/locales/es-ES.json
@@ -26,7 +26,7 @@
         "no-top-donor-description": "¡Conviértete en un soporte para desbloquear beneficios exclusivos!"
     },
     "card": {
-        "buy": "Agregar al Carrito",
+        "buy": "Comprar",
         "remove": "Eliminar",
         "subscribe": "Suscribirse",
         "unavailable": "No disponible",
