--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -26,7 +26,7 @@
         "no-top-donor-description": "Devenez un supporter pour débloquer des avantages exclusifs !"
     },
     "card": {
-        "buy": "Ajouter au panier",
+        "buy": "Acheter",
         "remove": "Supprimer",
         "subscribe": "S'abonner",
         "unavailable": "Indisponible",
